# platanus-hack-25-team-30

./: README.md  platanus-hack-project.json  project-description.md
frontend/: .cta.json  index.html  package.json  pnpm-lock.yaml
frontend/src/: auth.tsx  main.tsx  routeTree.gen.ts  styles.css
frontend/src/components/: CardStack.tsx  Header.tsx
frontend/src/data/: contact-data.ts
frontend/src/hooks/: all-contacts-stats-hook.ts  contact-chats-hook.ts  contact-hook.ts  contact-photo-hook.ts  contact-stats-hook.ts  import-hook.ts  useWebSocketChat.ts
frontend/src/lib/: demo-store.ts  utils.ts
frontend/src/routes/: __root.tsx  _auth.contacts.$contactId.tsx  _auth.contacts.index.tsx  _auth.dashboard.tsx  _auth.profile.tsx  _auth.tsx  import.tsx  (+1 more)
platanus-backend/: .gitignore  database.db  pyproject.toml
platanus-backend/app/: db.py  dependencies.py  main.py
platanus-backend/app/routers/: users.py
platanus-backend/app/routers/chat/: models.py  websocket.py
platanus-backend/app/routers/contacts/: create.py  main.py  stats.py
platanus-backend/app/routers/contacts/records/: get.py  main.py  models.py  utils.py
platanus-backend/app/routers/contacts/records/integrations/: whatsapp.py
platanus-backend/app/routers/persons/: create.py
platanus-backend/app/routers/persons/chat/: chat.py  utils.py
platanus-backend/app/routers/persons/chat/integrations/: whatsapp.py
platanus-backend/app/utils/chat_parsers/: message_parser.py
platanus-backend/app/utils/chat_parsers/specific/: whatsapp_message_parser.py
platanus-backend/app/utils/llm/: client.py
(+30 files in other folders)
